--- a/cx.html
+++ b/cx.html
@@ -6422,7 +6422,7 @@ class="link-seesrc" target="_blank">Source</a>
     <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">OverflowError</span><span class="Other">,</span> <span class="Identifier">ValueError</span><span class="Other">,</span> <span class="Identifier">AssertionError</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></div><span class="Other pragmaend">.}</span></pre></dt>
 <dd>
 <p>getFirstMondayYear</p>
-<p>returns date of first monday of any given year should be ok for the next years but after 2100-02-28 all bets are off</p>
+<p>returns date of first monday of any given year</p>
 <pre class="listing"><span class="Identifier">echo</span>  <span class="Identifier">getFirstMondayYear</span><span class="Punctuation">(</span><span class="StringLit">&quot;2015&quot;</span><span class="Punctuation">)</span></pre>
 &nbsp;&nbsp;<a
 href="/tree/master/cx.nim#L2773"
@@ -6440,9 +6440,9 @@ class="link-seesrc" target="_blank">Source</a>
 <span class="Identifier">echo</span>  <span class="Identifier">getFirstMondayYearMonth</span><span class="Punctuation">(</span><span class="StringLit">&quot;2015-2&quot;</span><span class="Punctuation">)</span></pre><p>in case of invalid dates nil will be returned should be ok for the next years but after 2100-02-28 all bets are off</p>
 
 &nbsp;&nbsp;<a
-href="/tree/master/cx.nim#L2791"
+href="/tree/master/cx.nim#L2790"
 class="link-seesrc" target="_blank">Source</a>
-<a href="/edit/devel/cx.nim#L2791" class="link-seesrc" target="_blank" >Edit</a>
+<a href="/edit/devel/cx.nim#L2790" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 <dt id="getNextMonday"><a name="getNextMonday,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">getNextMonday</span><span class="Other">(</span><span class="Identifier">adate</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other pragmabegin">{.</span><div class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">IOError</span><span class="Other">,</span> <span class="Identifier">AssertionError</span><span class="Other">,</span>
@@ -6457,9 +6457,9 @@ getNextMonday<pre class="listing"><span class="Identifier">echo</span>  <span cl
     <span class="Identifier">echo</span> <span class="Identifier">dw</span></pre><p>in case of invalid dates nil will be returned </p>
 
 &nbsp;&nbsp;<a
-href="/tree/master/cx.nim#L2818"
+href="/tree/master/cx.nim#L2817"
 class="link-seesrc" target="_blank">Source</a>
-<a href="/edit/devel/cx.nim#L2818" class="link-seesrc" target="_blank" >Edit</a>
+<a href="/edit/devel/cx.nim#L2817" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 <dt id="createSeqDate"><a name="createSeqDate,string,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">createSeqDate</span><span class="Other">(</span><span class="Identifier">fromDate</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">toDate</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">string</span><span class="Other">]</span> <span class="Other pragmabegin">{.</span><div class="pragma">
@@ -7974,7 +7974,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2017-06-18 15:18:25 UTC</small>
+        <small>Made with Nim. Generated: 2017-06-18 21:31:07 UTC</small>
       </div>
     </div>
   </div>
