--- a/cx.html
+++ b/cx.html
@@ -2379,6 +2379,8 @@ function main() {
     title="doFinish()"><wbr />do<wbr />Finish<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#handler,"
     title="handler()"><wbr />handler<span class="attachedType" style="visibility:hidden"></span></a></li>
+  <li><a class="reference" href="#cxmain,"
+    title="cxmain()"><wbr />cxmain<span class="attachedType" style="visibility:hidden"></span></a></li>
 
   </ul>
 </li>
@@ -2493,7 +2495,7 @@ Version     : 0.9.9
 
 ProjectStart: 2015-06-20
 
-Latest      : 2017-08-08
+Latest      : 2017-08-09
 
 Compiler    : Nim &gt;= 0.17.x dev branch
 
@@ -5924,6 +5926,14 @@ forward declaration
 
 
 </dd>
+<dt id="cxmain"><a name="cxmain,"></a><pre><span class="Keyword">proc</span> <span class="Identifier">cxmain</span><span class="Other">(</span><span class="Other">)</span> <span class="Other pragmabegin">{.</span><div class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">IOError</span><span class="Other">,</span> <span class="Identifier">OSError</span><span class="Other">,</span> <span class="Identifier">AssertionError</span><span class="Other">,</span> <span class="Identifier">Exception</span><span class="Other">,</span> <span class="Identifier">OverflowError</span><span class="Other">,</span>
+                      <span class="Identifier">ValueError</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">WriteIOEffect</span><span class="Other">,</span> <span class="Identifier">ReadIOEffect</span><span class="Other">,</span> <span class="Identifier">RootEffect</span><span class="Other">,</span>
+                                        <span class="Identifier">TimeEffect</span><span class="Other">,</span> <span class="Identifier">ReadEnvEffect</span><span class="Other">,</span> <span class="Identifier">ReadDirEffect</span><span class="Other">,</span>
+                                        <span class="Identifier">ExecIOEffect</span><span class="Other">]</span></div><span class="Other pragmaend">.}</span></pre></dt>
+<dd>
+
+
+</dd>
 
 </dl></div>
 <div class="section" id="15">
@@ -6269,7 +6279,7 @@ zipWith<pre class="listing"><span class="Keyword">var</span> <span class="Identi
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2017-08-09 08:46:13 UTC</small>
+        <small>Made with Nim. Generated: 2017-08-09 19:47:40 UTC</small>
       </div>
     </div>
   </div>
