--- a/cx.html
+++ b/cx.html
@@ -2292,8 +2292,6 @@ function main() {
     title="`$`[T](some: typedesc[T]): string"><wbr />`$`<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#typeTest,T"
     title="typeTest[T](x: T): T"><wbr />type<wbr />Test<span class="attachedType" style="visibility:hidden"></span></a></li>
-  <li><a class="reference" href="#sortMe,seq[T]"
-    title="sortMe[T](xs: var seq[T]; order = Ascending): seq[T]"><wbr />sort<wbr />Me<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#fromCString,pointer,int"
     title="fromCString(p: pointer; len: int): string"><wbr />from<wbr />CString<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#showPalette,string"
@@ -5527,16 +5525,6 @@ getNextMonday<pre class="listing"><span class="Identifier">echo</span>  <span cl
 
 
 </dd>
-<dt id="sortMe"><a name="sortMe,seq[T]"></a><pre><span class="Keyword">proc</span> <span class="Identifier">sortMe</span><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">(</span><span class="Identifier">xs</span><span class="Other">:</span> <span class="Keyword">var</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">;</span> <span class="Identifier">order</span> <span class="Other">=</span> <span class="Identifier">Ascending</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span></pre></dt>
-<dd>
-<p>sortMe</p>
-<p>sorts seqs of int,float,string and returns a sorted seq</p>
-<p>with order Ascending or Descending</p>
-<pre class="listing"><span class="Keyword">var</span> <span class="Identifier">z</span> <span class="Operator">=</span> <span class="Identifier">createSeqFloat</span><span class="Punctuation">(</span><span class="Punctuation">)</span>
-<span class="Identifier">printLn</span><span class="Punctuation">(</span><span class="Identifier">sortMe</span><span class="Punctuation">(</span><span class="Identifier">z</span><span class="Punctuation">)</span><span class="Punctuation">,</span><span class="Identifier">salmon</span><span class="Punctuation">)</span>
-<span class="Identifier">printLn</span><span class="Punctuation">(</span><span class="Identifier">sortMe</span><span class="Punctuation">(</span><span class="Identifier">z</span><span class="Punctuation">,</span><span class="Identifier">Descending</span><span class="Punctuation">)</span><span class="Punctuation">,</span><span class="Identifier">peru</span><span class="Punctuation">)</span></pre>
-
-</dd>
 <dt id="fromCString"><a name="fromCString,pointer,int"></a><pre><span class="Keyword">proc</span> <span class="Identifier">fromCString</span><span class="Other">(</span><span class="Identifier">p</span><span class="Other">:</span> <span class="Identifier">pointer</span><span class="Other">;</span> <span class="Identifier">len</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other pragmabegin">{.</span><div class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></div><span class="Other pragmaend">.}</span></pre></dt>
 <dd>
 <p>fromCString</p>
@@ -6196,17 +6184,21 @@ latest terminalheight always available in th
 <pre class="listing"><span class="Identifier">benchmark</span><span class="Punctuation">(</span><span class="StringLit">&quot;whatever&quot;</span><span class="Punctuation">)</span><span class="Punctuation">:</span>
   <span class="Keyword">let</span> <span class="Identifier">z</span> <span class="Operator">=</span> <span class="FloatNumber">0.</span><span class="Operator">.</span> <span class="DecNumber">1000</span>
   <span class="Identifier">loopy</span><span class="Punctuation">(</span><span class="Identifier">z</span><span class="Punctuation">,</span><span class="Identifier">printLn</span><span class="Punctuation">(</span><span class="StringLit">&quot;Kami makan tiga kali setiap hari.&quot;</span><span class="Punctuation">,</span><span class="Identifier">randcol</span><span class="Punctuation">(</span><span class="Punctuation">)</span><span class="Punctuation">)</span><span class="Punctuation">)</span></pre><pre class="listing"><span class="Keyword">proc</span> <span class="Identifier">doit</span><span class="Punctuation">(</span><span class="Punctuation">)</span> <span class="Operator">=</span>
-  <span class="Keyword">var</span> <span class="Identifier">s</span> <span class="Operator">=</span> <span class="Identifier">createSeqFloat</span><span class="Punctuation">(</span><span class="DecNumber">10</span><span class="Punctuation">,</span><span class="DecNumber">3</span><span class="Punctuation">)</span>
-  <span class="Keyword">var</span> <span class="Identifier">c</span> <span class="Operator">=</span> <span class="DecNumber">0</span>
-  <span class="Keyword">for</span> <span class="Identifier">x</span> <span class="Keyword">in</span> <span class="Identifier">sortMe</span><span class="Punctuation">(</span><span class="Identifier">s</span><span class="Punctuation">)</span><span class="Punctuation">:</span>
-      <span class="Identifier">inc</span> <span class="Identifier">c</span>
-      <span class="Identifier">printLnBiCol</span><span class="Punctuation">(</span><span class="Identifier">fmtx</span><span class="Punctuation">(</span><span class="Punctuation">[</span><span class="StringLit">&quot;&gt;4&quot;</span><span class="Punctuation">,</span><span class="StringLit">&quot;&lt;6&quot;</span><span class="Punctuation">,</span><span class="StringLit">&quot;&lt;f2.4&quot;</span><span class="Punctuation">]</span><span class="Punctuation">,</span><span class="Operator">$</span><span class="Identifier">c</span><span class="Punctuation">,</span><span class="StringLit">&quot; :&quot;</span><span class="Punctuation">,</span><span class="Operator">$</span><span class="Identifier">x</span><span class="Punctuation">)</span><span class="Punctuation">)</span>
-
-<span class="Identifier">benchmark</span><span class="Punctuation">(</span><span class="StringLit">&quot;doit&quot;</span><span class="Punctuation">)</span><span class="Punctuation">:</span>
-  <span class="Keyword">for</span> <span class="Identifier">x</span> <span class="Keyword">in</span> <span class="FloatNumber">0.</span><span class="Operator">.</span> <span class="DecNumber">100</span><span class="Punctuation">:</span>
-      <span class="Identifier">doit</span><span class="Punctuation">(</span><span class="Punctuation">)</span>
-
-<span class="Identifier">showBench</span><span class="Punctuation">(</span><span class="Punctuation">)</span></pre>
+   <span class="Keyword">var</span> <span class="Identifier">s</span> <span class="Operator">=</span> <span class="Identifier">createSeqFloat</span><span class="Punctuation">(</span><span class="DecNumber">10</span><span class="Punctuation">,</span><span class="DecNumber">9</span><span class="Punctuation">)</span>
+   <span class="Keyword">var</span> <span class="Identifier">c</span> <span class="Operator">=</span> <span class="DecNumber">0</span>
+   <span class="Identifier">s</span><span class="Operator">.</span><span class="Identifier">sort</span><span class="Punctuation">(</span><span class="Identifier">system</span><span class="Operator">.</span><span class="Identifier">cmp</span><span class="Punctuation">,</span><span class="Identifier">order</span> <span class="Operator">=</span> <span class="Identifier">Descending</span><span class="Punctuation">)</span>
+   <span class="Keyword">for</span> <span class="Identifier">x</span> <span class="Keyword">in</span> <span class="Identifier">s</span><span class="Punctuation">:</span>
+        <span class="Identifier">inc</span> <span class="Identifier">c</span>
+        <span class="Identifier">printLnBiCol</span><span class="Punctuation">(</span><span class="Identifier">fmtx</span><span class="Punctuation">(</span><span class="Punctuation">[</span><span class="StringLit">&quot;&gt;4&quot;</span><span class="Punctuation">,</span><span class="StringLit">&quot;&lt;6&quot;</span><span class="Punctuation">,</span><span class="StringLit">&quot;&lt;f15.7&quot;</span><span class="Punctuation">]</span><span class="Punctuation">,</span><span class="Operator">$</span><span class="Identifier">c</span><span class="Punctuation">,</span><span class="StringLit">&quot; :&quot;</span><span class="Punctuation">,</span><span class="Operator">$</span><span class="Identifier">x</span><span class="Punctuation">)</span><span class="Punctuation">)</span>
+ 
+ <span class="Identifier">benchmark</span><span class="Punctuation">(</span><span class="StringLit">&quot;doit&quot;</span><span class="Punctuation">)</span><span class="Punctuation">:</span>
+   <span class="Keyword">for</span> <span class="Identifier">x</span> <span class="Keyword">in</span> <span class="FloatNumber">0.</span><span class="Operator">.</span> <span class="DecNumber">100</span><span class="Punctuation">:</span>
+       <span class="Identifier">doit</span><span class="Punctuation">(</span><span class="Punctuation">)</span>
+       <span class="Identifier">hline</span><span class="Punctuation">(</span><span class="DecNumber">30</span><span class="Punctuation">)</span>
+       <span class="Identifier">printLn</span><span class="Punctuation">(</span><span class="StringLit">&quot; &quot;</span> <span class="Operator">&amp;</span> <span class="Operator">$</span><span class="Identifier">x</span><span class="Punctuation">,</span><span class="Identifier">randcol</span><span class="Punctuation">(</span><span class="Punctuation">)</span><span class="Punctuation">)</span>
+       <span class="Identifier">echo</span><span class="Punctuation">(</span><span class="Punctuation">)</span>
+ 
+ <span class="Identifier">showBench</span><span class="Punctuation">(</span><span class="Punctuation">)</span></pre>
 
 </dd>
 <dt id="withFile"><a name="withFile.t,untyped,untyped,untyped,untyped"></a><pre><span class="Keyword">template</span> <span class="Identifier">withFile</span><span class="Other">(</span><span class="Identifier">f</span><span class="Other">,</span> <span class="Identifier">fn</span><span class="Other">,</span> <span class="Identifier">mode</span><span class="Other">,</span> <span class="Identifier">actions</span><span class="Other">:</span> <span class="Identifier">untyped</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">untyped</span></pre></dt>
@@ -6302,7 +6294,7 @@ zipWith<pre class="listing"><span class="Keyword">var</span> <span class="Identi
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2017-08-10 20:17:49 UTC</small>
+        <small>Made with Nim. Generated: 2017-08-12 17:15:26 UTC</small>
       </div>
     </div>
   </div>
