--- a/cx.html
+++ b/cx.html
@@ -2075,8 +2075,12 @@ function main() {
 <li>
   <a class="reference reference-toplevel" href="#12" id="62">Procs</a>
   <ul class="simple simple-toc-section">
-      <li><a class="reference" href="#rndSampleInt,seq[int]"
-    title="rndSampleInt(asq: seq[int]): int"><wbr />rnd<wbr />Sample<wbr />Int<span class="attachedType" style="visibility:hidden"></span></a></li>
+      <li><a class="reference" href="#rndSample,seq[T]"
+    title="rndSample[T](asq: seq[T]): T"><wbr />rnd<wbr />Sample<span class="attachedType" style="visibility:hidden"></span></a></li>
+  <li><a class="reference" href="#[],openArray[T],Slice[Idx]"
+    title="`[]`[Idx, T](a: openArray[T]; x: Slice[Idx]): seq[T]"><wbr />`[]`<span class="attachedType" style="visibility:hidden"></span></a></li>
+  <li><a class="reference" href="#sampleSeq,openArray[T],int,int"
+    title="sampleSeq[T](x: openArray[T]; a, b: int): seq[T]"><wbr />sample<wbr />Seq<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#streamFile,string,FileMode"
     title="streamFile(filename: string; mode: FileMode): FileStream"><wbr />stream<wbr />File<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#uniform,float,float"
@@ -2504,7 +2508,7 @@ Version     : 0.9.9
 
 ProjectStart: 2015-06-20
 
-Latest      : 2017-08-16
+Latest      : 2017-08-20
 
 Compiler    : Nim &gt;= 0.17.x dev branch
 
@@ -4399,9 +4403,26 @@ index into colorNames
 <div class="section" id="12">
 <h1><a class="toc-backref" href="#12">Procs</a></h1>
 <dl class="item">
-<dt id="rndSampleInt"><a name="rndSampleInt,seq[int]"></a><pre><span class="Keyword">proc</span> <span class="Identifier">rndSampleInt</span><span class="Other">(</span><span class="Identifier">asq</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">int</span><span class="Other">]</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other pragmabegin">{.</span><div class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></div><span class="Other pragmaend">.}</span></pre></dt>
+<dt id="rndSample"><a name="rndSample,seq[T]"></a><pre><span class="Keyword">proc</span> <span class="Identifier">rndSample</span><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">(</span><span class="Identifier">asq</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">T</span></pre></dt>
 <dd>
-rndSampleint returns an int random sample from an integer sequence
+rndSample returns one random sample from a sequence
+
+</dd>
+<dt id="[]"><a name="[],openArray[T],Slice[Idx]"></a><pre><span class="Keyword">proc</span> <span class="Identifier">`[]`</span><span class="Other">[</span><span class="Identifier">Idx</span><span class="Other">,</span> <span class="Identifier">T</span><span class="Other">]</span><span class="Other">(</span><span class="Identifier">a</span><span class="Other">:</span> <span class="Identifier">openArray</span><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">;</span> <span class="Identifier">x</span><span class="Other">:</span> <span class="Identifier">Slice</span><span class="Other">[</span><span class="Identifier">Idx</span><span class="Other">]</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span></pre></dt>
+<dd>
+
+
+</dd>
+<dt id="sampleSeq"><a name="sampleSeq,openArray[T],int,int"></a><pre><span class="Keyword">proc</span> <span class="Identifier">sampleSeq</span><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">(</span><span class="Identifier">x</span><span class="Other">:</span> <span class="Identifier">openArray</span><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">;</span> <span class="Identifier">a</span><span class="Other">,</span> <span class="Identifier">b</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span></pre></dt>
+<dd>
+<p>sampleSeq</p>
+<p>based on an idea in nim playground</p>
+<p>returns a continuous subseq a..b from an array or seq if a &gt;= b</p>
+<pre class="listing"><span class="Keyword">import</span> <span class="Identifier">nimcx</span>
+<span class="Keyword">let</span> <span class="Identifier">x</span> <span class="Operator">=</span> <span class="Identifier">createSeqint</span><span class="Punctuation">(</span><span class="DecNumber">20</span><span class="Punctuation">)</span>
+<span class="Identifier">x</span><span class="Operator">.</span><span class="Identifier">sampleseq</span><span class="Punctuation">(</span><span class="DecNumber">4</span><span class="Punctuation">,</span><span class="DecNumber">8</span><span class="Punctuation">)</span>
+<span class="Identifier">echo</span> <span class="Identifier">x</span>
+<span class="Identifier">echo</span> <span class="Identifier">x</span><span class="Operator">.</span><span class="Identifier">sampleSeq</span><span class="Punctuation">(</span><span class="DecNumber">4</span><span class="Punctuation">,</span><span class="DecNumber">8</span><span class="Punctuation">)</span><span class="Operator">.</span><span class="Identifier">rndSample</span><span class="Punctuation">(</span><span class="Punctuation">)</span>    <span class="Comment"># get one randomly selected value from the subsequence</span></pre>
 
 </dd>
 <dt id="streamFile"><a name="streamFile,string,FileMode"></a><pre><span class="Keyword">proc</span> <span class="Identifier">streamFile</span><span class="Other">(</span><span class="Identifier">filename</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">mode</span><span class="Other">:</span> <span class="Identifier">FileMode</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">FileStream</span> <span class="Other pragmabegin">{.</span><div class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></div><span class="Other pragmaend">.}</span></pre></dt>
@@ -6316,7 +6337,7 @@ zipWith<pre class="listing"><span class="Keyword">var</span> <span class="Identi
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2017-08-16 21:59:13 UTC</small>
+        <small>Made with Nim. Generated: 2017-08-20 09:37:08 UTC</small>
       </div>
     </div>
   </div>
