--- a/cx.html
+++ b/cx.html
@@ -2164,6 +2164,14 @@ function main() {
     title="printLnBiCol[T](s: T; sep: string = &quot;:&quot;; colLeft: string = yellowgreen;
                 colRight: string = termwhite; xpos: int = 0; centered: bool = false;
                 styled: set[Style] = {})"><wbr />print<wbr />Ln<wbr />Bi<wbr />Col<span class="attachedType" style="visibility:hidden"></span></a></li>
+  <li><a class="reference" href="#printBiCol,varargs[T,],string,string,string,int,bool,set[Style]"
+    title="printBiCol[T](s: varargs[T, `$`]; colLeft: string = yellowgreen;
+              colRight: string = termwhite; sep: string = &quot;:&quot;; xpos: int = 0;
+              centered: bool = false; styled: set[Style] = {})"><wbr />print<wbr />Bi<wbr />Col<span class="attachedType" style="visibility:hidden"></span></a></li>
+  <li><a class="reference" href="#printLnBiCol,varargs[T,],string,string,string,int,bool,set[Style]"
+    title="printLnBiCol[T](s: varargs[T, `$`]; colLeft: string = yellowgreen;
+                colRight: string = termwhite; sep: string = &quot;:&quot;; xpos: int = 0;
+                centered: bool = false; styled: set[Style] = {})"><wbr />print<wbr />Ln<wbr />Bi<wbr />Col<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#printHL,string,string,string"
     title="printHL(s: string; substr: string; col: string = termwhite)"><wbr />print<wbr />HL<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#printLnHL,string,string,string"
@@ -2513,7 +2521,7 @@ Version     : 0.9.9
 
 ProjectStart: 2015-06-20
 
-Latest      : 2017-08-21
+Latest      : 2017-08-26
 
 Compiler    : Nim &gt;= 0.17.x dev branch
 
@@ -4888,6 +4896,50 @@ forward declaration
 forward declaration
 
 </dd>
+<dt id="printBiCol"><a name="printBiCol,varargs[T,],string,string,string,int,bool,set[Style]"></a><pre><span class="Keyword">proc</span> <span class="Identifier">printBiCol</span><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">varargs</span><span class="Other">[</span><span class="Identifier">T</span><span class="Other">,</span> <span class="Other">`</span><span class="Operator">$</span><span class="Other">`</span><span class="Other">]</span><span class="Other">;</span> <span class="Identifier">colLeft</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="Identifier">yellowgreen</span><span class="Other">;</span>
+                  <span class="Identifier">colRight</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="Identifier">termwhite</span><span class="Other">;</span> <span class="Identifier">sep</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="StringLit">&quot;:&quot;</span><span class="Other">;</span> <span class="Identifier">xpos</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">0</span><span class="Other">;</span>
+                  <span class="Identifier">centered</span><span class="Other">:</span> <span class="Identifier">bool</span> <span class="Other">=</span> <span class="Identifier">false</span><span class="Other">;</span> <span class="Identifier">styled</span><span class="Other">:</span> <span class="Identifier">set</span><span class="Other">[</span><span class="Identifier">Style</span><span class="Other">]</span> <span class="Other">=</span> <span class="Other">{</span><span class="Other">}</span><span class="Other">)</span></pre></dt>
+<dd>
+<p>printBiCol</p>
+<p>a newer version of printLnBiCol  currently under development changes: sep moved to behind colors in parameter ordering and input can be varargs which gives much better flexibility</p>
+<p>for this to work the complete parameter requirement must be given in the proc call</p>
+<p>echos a line in 2 colors based on a seperators first occurance</p>
+<p>default seperator = &quot;:&quot;</p>
+<p>Note : clrainbow not useable for right side color</p>
+<blockquote><p><dl class="docutils"><dt>for x  in 0.. &lt;3:</dt>
+<dd><dl class="docutils"><dt># here use default colors for left and right side of the seperator</dt>
+<dd>printBiCol(&quot;Test $1  : Ok &quot; % $x,&quot;this was $1 : what&quot; % $x,23456.789,randcol(),randcol(),&quot;:&quot;,0,false,{}) echo()</dd>
+</dl>
+</dd>
+<dt>for x  in 4.. &lt;6:</dt>
+<dd># here we change the default colors printBiCol(&quot;Test $1  : Ok this was $1 : what&quot; % $x,cyan,red) echo()</dd>
+</dl>
+<p>printBiCol(fmtx([&quot;&quot;,&quot;&quot;,&quot;&gt;4&quot;],&quot;Good Idea : &quot;,&quot; Number&quot;,50),yellow,randcol(),&quot;:&quot;,0,false,{}) echo()</p>
+</p></blockquote>
+
+
+</dd>
+<dt id="printLnBiCol"><a name="printLnBiCol,varargs[T,],string,string,string,int,bool,set[Style]"></a><pre><span class="Keyword">proc</span> <span class="Identifier">printLnBiCol</span><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">varargs</span><span class="Other">[</span><span class="Identifier">T</span><span class="Other">,</span> <span class="Other">`</span><span class="Operator">$</span><span class="Other">`</span><span class="Other">]</span><span class="Other">;</span> <span class="Identifier">colLeft</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="Identifier">yellowgreen</span><span class="Other">;</span>
+                    <span class="Identifier">colRight</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="Identifier">termwhite</span><span class="Other">;</span> <span class="Identifier">sep</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="StringLit">&quot;:&quot;</span><span class="Other">;</span> <span class="Identifier">xpos</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">0</span><span class="Other">;</span>
+                    <span class="Identifier">centered</span><span class="Other">:</span> <span class="Identifier">bool</span> <span class="Other">=</span> <span class="Identifier">false</span><span class="Other">;</span> <span class="Identifier">styled</span><span class="Other">:</span> <span class="Identifier">set</span><span class="Other">[</span><span class="Identifier">Style</span><span class="Other">]</span> <span class="Other">=</span> <span class="Other">{</span><span class="Other">}</span><span class="Other">)</span></pre></dt>
+<dd>
+<p>printLnBiCol</p>
+<p>a newer version of printLnBiCol  currently under development changes: sep moved to behind colors in parameter ordering and input can be varargs which gives much better flexibility</p>
+<p>for this to work the complete parameter requirement must be given in the proc call</p>
+<p>default seperator = &quot;:&quot;  if not found we execute printLn with available params</p>
+<pre class="listing"><span class="Keyword">import</span> <span class="Identifier">nimcx</span>
+
+<span class="Keyword">for</span> <span class="Identifier">x</span>  <span class="Keyword">in</span> <span class="FloatNumber">0.</span><span class="Operator">.</span> <span class="Operator">&lt;</span><span class="DecNumber">3</span><span class="Punctuation">:</span>
+   <span class="Comment"># here use default colors for left and right side of the seperator</span>
+    <span class="Identifier">printLnBiCol</span><span class="Punctuation">(</span><span class="StringLit">&quot;Test $1  : Ok &quot;</span> <span class="Operator">%</span> <span class="Operator">$</span><span class="Identifier">x</span><span class="Punctuation">,</span><span class="StringLit">&quot;this was $1 : what&quot;</span> <span class="Operator">%</span> <span class="Operator">$</span><span class="Identifier">x</span><span class="Punctuation">,</span><span class="FloatNumber">23456.789</span><span class="Punctuation">,</span><span class="Identifier">randcol</span><span class="Punctuation">(</span><span class="Punctuation">)</span><span class="Punctuation">,</span><span class="Identifier">randcol</span><span class="Punctuation">(</span><span class="Punctuation">)</span><span class="Punctuation">,</span><span class="StringLit">&quot;:&quot;</span><span class="Punctuation">,</span><span class="DecNumber">0</span><span class="Punctuation">,</span><span class="Identifier">false</span><span class="Punctuation">,</span><span class="Punctuation">{</span><span class="Punctuation">}</span><span class="Punctuation">)</span>
+
+<span class="Keyword">for</span> <span class="Identifier">x</span>  <span class="Keyword">in</span> <span class="FloatNumber">4.</span><span class="Operator">.</span> <span class="Operator">&lt;</span><span class="DecNumber">6</span><span class="Punctuation">:</span>
+    <span class="Comment"># here we change the default colors</span>
+    <span class="Identifier">printLnBiCol</span><span class="Punctuation">(</span><span class="StringLit">&quot;Test $1  : Ok this was $1 : what&quot;</span> <span class="Operator">%</span> <span class="Operator">$</span><span class="Identifier">x</span><span class="Punctuation">,</span><span class="Identifier">cyan</span><span class="Punctuation">,</span><span class="Identifier">red</span><span class="Punctuation">)</span>
+
+<span class="Identifier">printLnBiCol</span><span class="Punctuation">(</span><span class="Identifier">fmtx</span><span class="Punctuation">(</span><span class="Punctuation">[</span><span class="StringLit">&quot;&quot;</span><span class="Punctuation">,</span><span class="StringLit">&quot;&quot;</span><span class="Punctuation">,</span><span class="StringLit">&quot;&gt;4&quot;</span><span class="Punctuation">]</span><span class="Punctuation">,</span><span class="StringLit">&quot;Good Idea : &quot;</span><span class="Punctuation">,</span><span class="StringLit">&quot; Number&quot;</span><span class="Punctuation">,</span><span class="DecNumber">50</span><span class="Punctuation">)</span><span class="Punctuation">,</span><span class="Identifier">yellow</span><span class="Punctuation">,</span><span class="Identifier">randcol</span><span class="Punctuation">(</span><span class="Punctuation">)</span><span class="Punctuation">,</span><span class="StringLit">&quot;:&quot;</span><span class="Punctuation">,</span><span class="DecNumber">0</span><span class="Punctuation">,</span><span class="Identifier">false</span><span class="Punctuation">,</span><span class="Punctuation">{</span><span class="Punctuation">}</span><span class="Punctuation">)</span></pre>
+
+</dd>
 <dt id="printHL"><a name="printHL,string,string,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">printHL</span><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">substr</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">col</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="Identifier">termwhite</span><span class="Other">)</span> <span class="Other pragmabegin">{.</span><div class="pragma">
     <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">AssertionError</span><span class="Other">,</span> <span class="Identifier">IOError</span><span class="Other">,</span> <span class="Identifier">Exception</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">WriteIOEffect</span><span class="Other">,</span> <span class="Identifier">RootEffect</span><span class="Other">]</span></div><span class="Other pragmaend">.}</span></pre></dt>
 <dd>
@@ -6360,7 +6412,7 @@ zipWith<pre class="listing"><span class="Keyword">var</span> <span class="Identi
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2017-08-21 22:26:08 UTC</small>
+        <small>Made with Nim. Generated: 2017-08-26 16:36:09 UTC</small>
       </div>
     </div>
   </div>
